--- a/res/menu/accelerometer_play.xml
+++ b/res/menu/accelerometer_play.xml
@@ -1,9 +1,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
+	<item
+	    android:id="@+id/action_reload"
+	    android:showAsAction="always"
+	    android:icon="@drawable/ic_menu_refresh"
+	    android:title="reload" />
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:id="@+id/action_exit"
+        android:showAsAction="always"
+        android:icon="@drawable/ic_menu_close_clear_cancel"
+        android:title="close" />
+<!--     <item -->
+<!--         android:id="@+id/action_settings" -->
+<!--         android:orderInCategory="100" -->
+<!--         android:showAsAction="always" -->
+<!--         android:title="@string/action_settings"> -->
+<!--     </item> -->
 
 </menu>
